fixed chaining identifier resolver test